--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka_2.10</artifactId>
+            <artifactId>kafka_${scala.version}2.10</artifactId>
             <version>${kafka.version}</version>
         </dependency>
 
@@ -126,6 +126,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <scala.version>2.9.2</scala.version>
         <kafka.version>0.8.0</kafka.version>
         <log4j.version>1.2.15</log4j.version>
         <slf4j.version>1.6.4</slf4j.version>
