Fixup weird indentation in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -242,8 +242,7 @@
                     <archive>
                         <index>true</index>
                         <manifest>
-                            <addDefaultImplementationEntries>true
-                            </addDefaultImplementationEntries>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
                     </archive>
                 </configuration>
